# simple-roguelike

./: .gitignore  COPYRIGHTS  Cargo.toml  LICENSE  README.md  goblin.json
anymap/: Cargo.toml
anymap/src/: any.rs  lib.rs  raw.rs
resources/: scene.ron
resources/creatures/: merchant.json  warrior.json
resources/prefabs/creatures/: goblin.json
resources/prefabs/unanimate/: blood_dagger.json  rusty_sword.json
resources/saves/: save0.json
resources/unanimate/: stick.json
src/: commands.rs  creatures.rs  features.rs  game_state.rs  goblin3.json  main.rs  prefab.rs  saveload.rs  weapons.rs
src/components/: aggression.rs  attack.rs  entity_allocator.rs  entity_data.rs  entity_map.rs  health.rs  map.rs  mod.rs  name.rs  systems.rs
src/components/creature/: aggression.rs  aggressive.rs  attack.rs  mod.rs  neutral.rs  playable.rs
src/components/shared/: health.rs  mod.rs  name.rs  owner.rs
src/components/unanimate/: mod.rs  owned.rs  salable.rs  wieldable.rs
src/creature/: aggressive.rs  attack.rs  combatant.rs  mod.rs  neutral.rs  playable.rs  trader.rs
src/creatures/: creature_allocator.rs  creature_data.rs  creature_map.rs  mod.rs
src/shared/: health.rs  mod.rs  name.rs
src/unanimate/: mod.rs  owned.rs  salable.rs  tradeable.rs  wieldable.rs
src/util/: mod.rs
src/util/anymap/: mod.rs  raw.rs
