[package]
name = "simple-roguelike"
version = "0.1.0"
authors = ["Sinono3 <thesprinter79@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.5.0"
specs = { version = "*", features = ["serde"] }
specs-derive = "0.3.0"
serde = "1.0.82"
serde_derive = "1.0.82"
ron = "*" #serde_json = "1.0.33"
